// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateGeoMetaData matches snap 1`] = `
Array [
  Object {
    "content": "mock-lat;mock-lon",
    "property": "geo.position",
  },
  Object {
    "content": "mock-city, mock-state, mock-country",
    "property": "geo.placename",
  },
  Object {
    "content": "mock-country",
    "property": "geo.region",
  },
]
`;

exports[`generateGeoMetaData should *not* set geo.position when lat or lon are missing 1`] = `
Array [
  Object {
    "content": "mock-city, mock-state, mock-country",
    "property": "geo.placename",
  },
  Object {
    "content": "mock-country",
    "property": "geo.region",
  },
]
`;

exports[`generateGeoMetaData should exclude state and country from geo.placename when not provided 1`] = `
Array [
  Object {
    "content": "mock-lat;mock-lon",
    "property": "geo.position",
  },
  Object {
    "content": "mock-city",
    "property": "geo.placename",
  },
  Object {
    "content": undefined,
    "property": "geo.region",
  },
]
`;

exports[`generateGeoMetaData should exclude state from geo.placename when not provided 1`] = `
Array [
  Object {
    "content": "mock-lat;mock-lon",
    "property": "geo.position",
  },
  Object {
    "content": "mock-city, mock-country",
    "property": "geo.placename",
  },
  Object {
    "content": "mock-country",
    "property": "geo.region",
  },
]
`;

exports[`generateMetaData matches snap 1`] = `
Array [
  Object {
    "content": "mock description",
    "name": "description",
  },
  Object {
    "content": "mock,keywords,comma,separated",
    "name": "keywords",
  },
  Object {
    "content": "36212898404",
    "property": "fb:app_id",
  },
  Object {
    "content": "Meetup",
    "property": "og:site_name",
  },
  Object {
    "content": "article",
    "property": "og:type",
  },
  Object {
    "content": "mock title",
    "property": "og:title",
  },
  Object {
    "content": "mock description",
    "property": "og:description",
  },
  Object {
    "content": "https://mock-base-url.com/fr-FR/mock/preview/path",
    "property": "og:url",
  },
  Object {
    "content": "https://www.meetup.com/mock-default-image.jpg",
    "property": "og:image",
  },
  Object {
    "content": "Meetup",
    "property": "al:android:app_name",
  },
  Object {
    "content": "com.meetup",
    "property": "al:android:package",
  },
  Object {
    "content": "375990038",
    "property": "al:ios:app_store_id",
  },
  Object {
    "content": "Meetup",
    "property": "al:ios:app_name",
  },
  Object {
    "content": "true",
    "property": "al:web:should_fallback",
  },
  Object {
    "content": "/mock/app/path",
    "property": "al:android:url",
  },
  Object {
    "content": "/mock/app/path",
    "property": "al:ios:url",
  },
  Object {
    "content": "https://mock-base-url.com/fr-FR/mock/preview/path",
    "property": "al:web:url",
  },
  Object {
    "content": "summary_large_image",
    "property": "twitter:card",
  },
  Object {
    "content": "@meetup",
    "property": "twitter:site",
  },
  Object {
    "content": "https://www.meetup.com/mock-default-image.jpg",
    "property": "twitter:image",
  },
  Object {
    "content": "mock description",
    "property": "twitter:description",
  },
  Object {
    "content": "375990038",
    "property": "twitter:app:id:iphone",
  },
  Object {
    "content": "Meetup",
    "property": "twitter:app:name:iphone",
  },
  Object {
    "content": "375990038",
    "property": "twitter:app:id:ipad",
  },
  Object {
    "content": "Meetup",
    "property": "twitter:app:name:ipad",
  },
  Object {
    "content": "com.meetup",
    "property": "twitter:app:id:googleplay",
  },
  Object {
    "content": "Meetup",
    "property": "twitter:app:name:googleplay",
  },
]
`;
